--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -106,6 +106,7 @@
   <string name="ContactShareEditActivity_type_missing">أخرى</string>
   <string name="ContactShareEditActivity_invalid_contact">جهة الاتصال التي تم اختيارها غير صالحة.</string>
   <!--ConversationItem-->
+  <string name="ConversationItem_error_not_delivered">فشل الإرسال , اضغط للحصول على معلومات</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">تم استلام رسالة تبادل مفاتيح، أنقر للمتابعة.</string>
   <string name="ConversationItem_group_action_left">%1$s تَرك المجموعة.</string>
   <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">الاستعاضة برسالة غير مشفرة؟</string>
@@ -279,8 +280,10 @@
   <string name="DateUtils_today">اليوم</string>
   <string name="DateUtils_yesterday">البارحة</string>
   <!--DeliveryStatus-->
+  <string name="DeliveryStatus_sending">إرسال</string>
   <string name="DeliveryStatus_sent">أرسلت</string>
   <string name="DeliveryStatus_delivered">تم تسليم الرسالة</string>
+  <string name="DeliveryStatus_read">تمت القراءة</string>
   <!--DeviceListActivity-->
   <string name="DeviceListActivity_unlink_s">إلغاء ربط  \'%s\'؟</string>
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">لن يكون إرسال واستقبال الرسائل ممكنا بمجرد إلغاء ربط الجهاز.</string>
@@ -411,6 +414,7 @@
   <string name="MessageRecord_left_group">لقد تركت المجموعة.</string>
   <string name="MessageRecord_you_updated_group">قمت بتحديث المحموعة.</string>
   <string name="MessageRecord_you_called">مكالمات صادرة</string>
+  <string name="MessageRecord_called_you">مكالمة واردة</string>
   <string name="MessageRecord_missed_call">مكالمة فائتة</string>
   <string name="MessageRecord_s_updated_group">%s قام بتحديث المحموعة.</string>
   <string name="MessageRecord_s_called_you">%s قام بالاتصال</string>
@@ -499,6 +503,7 @@
   <string name="RegistrationActivity_i_understand">فهمت</string>
   <string name="RegistrationActivity_play_services_error">خطأ في خدمات Play </string>
   <string name="RegistrationActivity_google_play_services_is_updating_or_unavailable">جاري تحديث خدمات Google Play  أو أنها غير موجودة مؤقتاً</string>
+  <string name="RegistrationActivity_no_browser">لايمكن فتح الرابط . لايوجد متصفح ويب</string>
   <string name="RegistrationActivity_more_information">المزيد من المعلومات</string>
   <string name="RegistrationActivity_less_information">معلومات أقل</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">يحتاج سيجنال إلى إذن النفاذ لجهات الاتصال والوسائط من أجل التواصل مع الأصدقاء، تبادل الرسائل، وإجراء مكالمات آمنة.</string>
