--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -358,6 +358,8 @@
   <string name="MessageRecord_called_s">Ausgegangener Anruf an %s</string>
   <string name="MessageRecord_missed_call_from">Entgangener Anruf von %s</string>
   <string name="MessageRecord_s_joined_signal">%s ist bei Signal!</string>
+  <string name="MessageRecord_you_disabled_disappearing_messages">Du hast verschwindende Nachrichten deaktiviert.</string>
+  <string name="MessageRecord_s_disabled_disappearing_messages">%1$s hat verschwindende Nachrichten deaktiviert.</string>
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">Du hast die Zeit für verschwindende Nachrichten auf %1$s festgelegt.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s hat die Zeit für verschwindende Nachrichten auf %2$s festgelegt.</string>
   <string name="MessageRecord_your_safety_number_with_s_has_changed">Deine Sicherheitsnummer mit %s hat sich geändert</string>
@@ -486,6 +488,7 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="ThreadRecord_missed_call">Entgangener Anruf</string>
   <string name="ThreadRecord_media_message">Nachricht mit Medieninhalten</string>
   <string name="ThreadRecord_s_is_on_signal">%s ist bei Signal!</string>
+  <string name="ThreadRecord_disappearing_messages_disabled">Verschwindende Nachrichten deaktiviert</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Zeit für verschwindende Nachrichten auf %s festgelegt</string>
   <string name="ThreadRecord_safety_number_changed">Geänderte Sicherheitsnummer</string>
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">Deine Sicherheitsnummer mit %s hat sich geändert</string>
@@ -568,6 +571,7 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="SaveAttachmentTask_saved_to">In %s gespeichert</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Suchen</string>
+  <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Nach Unterhaltungen, Kontakten und Nachrichten suchen</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Neue Nachricht</string>
@@ -684,22 +688,22 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
     <item quantity="one">%d Minute</item>
     <item quantity="other">%d Minuten</item>
   </plurals>
-  <string name="expiration_minutes_abbreviated">%dmin</string>
+  <string name="expiration_minutes_abbreviated">%d min</string>
   <plurals name="expiration_hours">
     <item quantity="one">%d Stunde</item>
     <item quantity="other">%d Stunden</item>
   </plurals>
-  <string name="expiration_hours_abbreviated">%dh</string>
+  <string name="expiration_hours_abbreviated">%d h</string>
   <plurals name="expiration_days">
     <item quantity="one">%d Tag</item>
     <item quantity="other">%d Tage</item>
   </plurals>
-  <string name="expiration_days_abbreviated">%dd</string>
+  <string name="expiration_days_abbreviated">%d d</string>
   <plurals name="expiration_weeks">
     <item quantity="one">%d Woche</item>
     <item quantity="other">%d Wochen</item>
   </plurals>
-  <string name="expiration_weeks_abbreviated">%dw</string>
+  <string name="expiration_weeks_abbreviated">%d w</string>
   <!--unverified safety numbers-->
   <string name="IdentityUtil_unverified_banner_one">Deine Sicherheitsnummer mit %s hat sich geändert und ist nicht mehr verifiziert</string>
   <string name="IdentityUtil_unverified_banner_two">Deine Sicherheitsnummern mit %1$s und %2$s sind nicht mehr verifiziert</string>
