--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -358,6 +358,8 @@
   <string name="MessageRecord_called_s">Helistasid kontaktile %s</string>
   <string name="MessageRecord_missed_call_from">Vastamata kõne kontaktilt %s</string>
   <string name="MessageRecord_s_joined_signal">%s on Signalis!</string>
+  <string name="MessageRecord_you_disabled_disappearing_messages">Sa keelasid haihtuvad sõnumid.</string>
+  <string name="MessageRecord_s_disabled_disappearing_messages">%1$s keelas haihtuvad sõnumid.</string>
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">Sa määrasid haihtuva sõnumi taimeriks %1$s.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s määras haihtuva sõnumi taimeriks %2$s.</string>
   <string name="MessageRecord_your_safety_number_with_s_has_changed">Sinu turvanumber kontaktiga %s on muutunud.</string>
@@ -497,6 +499,7 @@
   <string name="ThreadRecord_missed_call">Vastamata kõne</string>
   <string name="ThreadRecord_media_message">Meediasõnum</string>
   <string name="ThreadRecord_s_is_on_signal">%s on Signalis!</string>
+  <string name="ThreadRecord_disappearing_messages_disabled">Haihtuvad sõnumid keelatud</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Hävineva sõnumi ajaks on seatud %s</string>
   <string name="ThreadRecord_safety_number_changed">Turvanumber muudetud</string>
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">Sinu turvanumber kontaktiga %s on muutunud.</string>
@@ -579,6 +582,7 @@
   <string name="SaveAttachmentTask_saved_to">Salvestatud kohta %s</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Otsi</string>
+  <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Otsi vestlusi, kontakte ja sõnumeid</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Uus sõnum</string>
