--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -94,8 +94,10 @@
   <string name="ContactShareEditActivity_type_missing">Besteak</string>
   <string name="ContactShareEditActivity_invalid_contact">Aukeratutako kontaktua baliogabea da</string>
   <!--ConversationItem-->
+  <string name="ConversationItem_error_not_delivered">Bidalketak huts egin du, tap egin xehetasunak ikusteko</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Jaso da gakoaren datu-trukatzearen mezua, tap egin prozesatzeko.</string>
   <string name="ConversationItem_group_action_left">%1$s taldea utzi du</string>
+  <string name="ConversationItem_click_to_approve_unencrypted">Bidalketak huts egin du, tap egin segurtasunik gabeko alternatibarako</string>
   <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Enkriptatu gabeko SMSaz baliatu?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Enkriptatu gabeko MMSaz baliatu?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">Mezu hau <b>ez</b> da zifratuko jadanik hartzailea ez delako Signal erabiltzailea.\n\nSegurtasunik gabeko mezua bidali?</string>
@@ -224,8 +226,10 @@
   <string name="DateUtils_today">Gaur</string>
   <string name="DateUtils_yesterday">Atzo</string>
   <!--DeliveryStatus-->
+  <string name="DeliveryStatus_sending">Bidaltzen</string>
   <string name="DeliveryStatus_sent">Bidalita</string>
   <string name="DeliveryStatus_delivered">Banatua</string>
+  <string name="DeliveryStatus_read">Irakurrita</string>
   <!--DeviceListActivity-->
   <string name="DeviceListActivity_unlink_s">\'%s\'-rekin lotura ezabatu?</string>
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Gailu hau desparekatu ondoren ezin ditzakezu mezuak bidal eta jaso.</string>
@@ -348,12 +352,15 @@
   <string name="MessageRecord_left_group">Taldea utzi duzu.</string>
   <string name="MessageRecord_you_updated_group">Taldea eguneratu duzu</string>
   <string name="MessageRecord_you_called">Deitu duzu</string>
+  <string name="MessageRecord_called_you">Kontaktuak deitu du</string>
   <string name="MessageRecord_missed_call">Erantzun gabeko deia</string>
   <string name="MessageRecord_s_updated_group">%s-ek taldea eguneratu du.</string>
   <string name="MessageRecord_s_called_you">%s-(e)k deitu dizu</string>
   <string name="MessageRecord_called_s">%s-(e)ri deitu duzu</string>
   <string name="MessageRecord_missed_call_from">%s-en erantzun gabeko deia</string>
   <string name="MessageRecord_s_joined_signal">%sSignal-en dago!</string>
+  <string name="MessageRecord_you_set_disappearing_message_time_to_s">Desagertzen diren mezuen debora %1$s-tan ezarrita</string>
+  <string name="MessageRecord_s_set_disappearing_message_time_to_s">Desagertzen diren mezuen debora %2$s-tan ezarri du %1$s-k</string>
   <string name="MessageRecord_your_safety_number_with_s_has_changed">Zure segurtasun zenbakia %s aldatu da.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified">%srekin duzun segurtasun zenbakia egiaztatu da</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">%srekin duzun segurtasun zenbakia egiaztatutzat markatu duzu beste gailu batetik</string>
@@ -573,6 +580,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <string name="SaveAttachmentTask_saved_to">%s helbidean gordeta</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Bilatu</string>
+  <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Bilatu solasaldiak, kontaktuak eta mezuak</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Mezu berria</string>
