--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -94,8 +94,10 @@
   <string name="ContactShareEditActivity_type_missing">Altro</string>
   <string name="ContactShareEditActivity_invalid_contact">Il contatto selezionato non è valido</string>
   <!--ConversationItem-->
+  <string name="ConversationItem_error_not_delivered">Invio fallito, tocca per dettagli</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Ricevuto un messaggio con chiave di scambio, tocca per processarlo</string>
   <string name="ConversationItem_group_action_left">%1$s ha lasciato il gruppo.</string>
+  <string name="ConversationItem_click_to_approve_unencrypted">Invio fallito, tocca per invio non sicuro</string>
   <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Tornare agli SMS non cifrati?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Tornare agli MMS non cifrati?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">Questo messaggio <b>non</b> sarà criptato perché il destinatario non è più  un utente Signal.\n\nInviare un messaggio non sicuro?</string>
@@ -223,8 +225,10 @@
   <string name="DateUtils_today">Oggi</string>
   <string name="DateUtils_yesterday">Ieri</string>
   <!--DeliveryStatus-->
+  <string name="DeliveryStatus_sending">Invio</string>
   <string name="DeliveryStatus_sent">Inviato</string>
   <string name="DeliveryStatus_delivered">Consegnato</string>
+  <string name="DeliveryStatus_read">Letto</string>
   <!--DeviceListActivity-->
   <string name="DeviceListActivity_unlink_s">Scollegare \'%s\'?</string>
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Scollegando questo dispositivo non gli sarà più possibile inviare o ricevere messaggi.</string>
@@ -348,12 +352,15 @@ I suoi messaggi e le chiamate sono state disabilitate, si prega di provare e ri-
   <string name="MessageRecord_left_group">Hai lasciato il gruppo.</string>
   <string name="MessageRecord_you_updated_group">Hai aggiornato il gruppo.</string>
   <string name="MessageRecord_you_called">Hai chiamato</string>
+  <string name="MessageRecord_called_you">Contatto chiamato</string>
   <string name="MessageRecord_missed_call">Chiamata persa</string>
   <string name="MessageRecord_s_updated_group">%s ha aggiornato il gruppo.</string>
   <string name="MessageRecord_s_called_you">%s ti ha chiamato</string>
   <string name="MessageRecord_called_s">Hai chiamato %s</string>
   <string name="MessageRecord_missed_call_from">Chiamata persa da %s</string>
   <string name="MessageRecord_s_joined_signal">%s è su Signal!</string>
+  <string name="MessageRecord_you_set_disappearing_message_time_to_s">Hai settato i messaggi a scomparsa a %1$s.</string>
+  <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s ha settato i messaggi a scomparsa a %2$s</string>
   <string name="MessageRecord_your_safety_number_with_s_has_changed">Il tuo codice di sicurezza con %s è cambiato.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified">Hai segnato il codice di sicurezza con %s come verificato</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Hai segnato il codice di sicurezza con %s come verificato da un altro dispositivo</string>
@@ -568,6 +575,7 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="SaveAttachmentTask_saved_to">Salvato in %s</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Cerca</string>
+  <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Cerca conversazioni, contatti e messaggi</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nuovo messaggio</string>
