--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -94,8 +94,10 @@
   <string name="ContactShareEditActivity_type_missing">Ander</string>
   <string name="ContactShareEditActivity_invalid_contact">Het geselecteerde contact was ongeldig</string>
   <!--ConversationItem-->
+  <string name="ConversationItem_error_not_delivered">Verzenden is mislukt, tap voor details</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Sleuteluitwisselingsbericht ontvangen, tik om te verwerken.</string>
   <string name="ConversationItem_group_action_left">%1$s heeft de groep verlaten.</string>
+  <string name="ConversationItem_click_to_approve_unencrypted">Verzenden is mislukt, tap voor onbeveiligd verzenden</string>
   <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Terugvallen naar onversleutelde sms?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Terugvallen naar onversleutelde mms?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">Dit bericht zal <b>niet</b> versleuteld worden omdat de ontvanger geen Signal meer gebruikt.\n\nOnbeveiligd bericht verzenden?</string>
@@ -223,8 +225,10 @@
   <string name="DateUtils_today">Vandaag</string>
   <string name="DateUtils_yesterday">Gisteren</string>
   <!--DeliveryStatus-->
+  <string name="DeliveryStatus_sending">Zenden</string>
   <string name="DeliveryStatus_sent">Verzonden</string>
   <string name="DeliveryStatus_delivered">Bezorgd </string>
+  <string name="DeliveryStatus_read">Lees</string>
   <!--DeviceListActivity-->
   <string name="DeviceListActivity_unlink_s">\'%s\' ontkoppelen?</string>
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Door het ontkoppelen van dit apparaat kan het geen berichten meer verzenden of ontvangen.</string>
@@ -347,12 +351,15 @@
   <string name="MessageRecord_left_group">Je hebt de groep verlaten.</string>
   <string name="MessageRecord_you_updated_group">Je hebt de groep bijgewerkt.</string>
   <string name="MessageRecord_you_called">Jij hebt gebeld</string>
+  <string name="MessageRecord_called_you">Contactpersoon gebeld</string>
   <string name="MessageRecord_missed_call">Gemiste oproep</string>
   <string name="MessageRecord_s_updated_group">%s heeft de groep bijgewerkt.</string>
   <string name="MessageRecord_s_called_you">%s heeft je gebeld</string>
   <string name="MessageRecord_called_s">%s gebeld</string>
   <string name="MessageRecord_missed_call_from">Gemiste oproep van %s</string>
   <string name="MessageRecord_s_joined_signal">%s zit op Signal!</string>
+  <string name="MessageRecord_you_set_disappearing_message_time_to_s">Je hebt de timer voor verdwijnende berichten op %1$sgezet.</string>
+  <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$szet de timervoor verdwijnende berichten op %2$s.</string>
   <string name="MessageRecord_your_safety_number_with_s_has_changed">Je veiligheidsnummer met %s is veranderd.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified">Je hebt je veiligheidsnummer met %s gemarkeerd als geverifieerd</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Je hebt je veiligheidsnummer met %s gemarkeerd als geverifieerd vanop een ander apparaat</string>
@@ -567,6 +574,7 @@ Sleuteluitwisselingsbericht ontvangen voor een verkeerde protocol-versie.</strin
   <string name="SaveAttachmentTask_saved_to">Opgeslagen naar %s</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Zoeken</string>
+  <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Zoek naar conversaties, contacten, en berichten</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nieuw bericht</string>
