--- a/res/values-nn/strings.xml
+++ b/res/values-nn/strings.xml
@@ -94,8 +94,10 @@
   <string name="ContactShareEditActivity_type_missing">Anna</string>
   <string name="ContactShareEditActivity_invalid_contact">Den valde kontakten er ugyldig</string>
   <!--ConversationItem-->
+  <string name="ConversationItem_error_not_delivered">Feil ved sending, trykk for detaljar</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Melding for nøkkelutveksling motteken. Trykk for å handsama.</string>
   <string name="ConversationItem_group_action_left">%1$s har forlate gruppa.</string>
+  <string name="ConversationItem_click_to_approve_unencrypted">Feil ved sending, trykk for å senda med utrygg alternativ metode</string>
   <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Vil du bruka ukryptert SMS som reserveløysing?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Vil du bruka ukryptert MMS som reserveløysing?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">Denne meldinga vert <b>ikkje</b> kryptert, fordi mottakaren ikkje brukar Signal lenger.\n\nVil du senda ho ukryptert?</string>
@@ -218,12 +220,15 @@
   <string name="CustomDefaultPreference_using_default">Brukar forvald: %s</string>
   <string name="CustomDefaultPreference_none">Ingen</string>
   <!--DateUtils-->
+  <string name="DateUtils_just_now">No</string>
   <string name="DateUtils_minutes_ago">%d min</string>
   <string name="DateUtils_today">I dag</string>
   <string name="DateUtils_yesterday">I går</string>
   <!--DeliveryStatus-->
+  <string name="DeliveryStatus_sending">Sendar</string>
   <string name="DeliveryStatus_sent">Sendt</string>
   <string name="DeliveryStatus_delivered">Levert</string>
+  <string name="DeliveryStatus_read">Lese</string>
   <!--DeviceListActivity-->
   <string name="DeviceListActivity_unlink_s">Vil du kopla frå «%s»?</string>
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Viss du koplar denne eininga frå tenesta, kan ho ikkje lenger senda eller motta meldingar.</string>
@@ -346,12 +351,15 @@
   <string name="MessageRecord_left_group">Du har forlate gruppa.</string>
   <string name="MessageRecord_you_updated_group">Du oppdaterte gruppa.</string>
   <string name="MessageRecord_you_called">Du ringte</string>
+  <string name="MessageRecord_called_you">Kontakt ringte</string>
   <string name="MessageRecord_missed_call">Usvart anrop</string>
   <string name="MessageRecord_s_updated_group">%s oppdaterte gruppa.</string>
   <string name="MessageRecord_s_called_you">%s ringte deg</string>
   <string name="MessageRecord_called_s">Ringte %s</string>
   <string name="MessageRecord_missed_call_from">Tapt anrop frå %s</string>
   <string name="MessageRecord_s_joined_signal">%s er på Signal!</string>
+  <string name="MessageRecord_you_set_disappearing_message_time_to_s">Du stilte inn utløpstida for forsvinnande meldingar til %1$s</string>
+  <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s stilte inn utløpstida for forsvinnande meldingar til %2$s</string>
   <string name="MessageRecord_your_safety_number_with_s_has_changed">Tryggleiksnummeret ditt med %s har endra seg.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified">Du markerte at tryggleiksnummeret ditt med %s er stadfesta.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Du markerte at tryggleiksnummeret ditt med %s er stadfesta frå ei anna eining</string>
@@ -567,6 +575,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <string name="SaveAttachmentTask_saved_to">Lagra til %s</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Søk</string>
+  <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Søk etter samtalar, kontaktar og meldingar</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Ny melding</string>
