--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -19,7 +19,7 @@
   <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Zmazať všetky staré správy?</string>
   <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
     <item quantity="one">Týmto sa premažú všetky konverzácie až na poslednú správu.</item>
-    <item quantity="few">Týmto sa premažú všetky konverzácie až na posledných %d správ.</item>
+    <item quantity="few">Týmto sa premažú všetky konverzácie až na posledné %d správy.</item>
     <item quantity="many">Týmto sa premažú všetky konverzácie až na posledných %d správ.</item>
     <item quantity="other">Týmto sa premažú všetky konverzácie až na posledných %d správ.</item>
   </plurals>
@@ -27,21 +27,22 @@
   <string name="ApplicationPreferencesActivity_disable_passphrase">Vypnúť heslo?</string>
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Toto natrvalo odomkne Signal a upozornenia správ.</string>
   <string name="ApplicationPreferencesActivity_disable">Vypnúť</string>
-  <string name="ApplicationPreferencesActivity_unregistering">Odregistrovávam</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Odregistrovanie zo Signal správ a hovorov...</string>
+  <string name="ApplicationPreferencesActivity_unregistering">Rušenie registrácie</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Rušenie registrácie Signal správ a hovorov...</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Vypnúť Signal správy a hovory?</string>
-  <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Vypnutie Signal správ a hovorov odregistrovaním zo servera. Pre ich opätovné použitie budete musieť v budúcnosti znova registrovať vaše číslo.</string>
+  <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Zakážte Signal správy a hovory zrušením registrácie zo serveru. Pre ich opätovné použitie budete musieť svoje telefónne číslo znovu zaregistrovať.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Chyba pripojenia na server!</string>
   <string name="ApplicationPreferencesActivity_sms_enabled">SMS zapnuté</string>
-  <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Dotykom sem môžete zmeniť Vašu predvolenú aplikáciu pre SMS.</string>
+  <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Dotykom môžete zmeniť Vašu predvolenú SMS aplikáciu.</string>
   <string name="ApplicationPreferencesActivity_sms_disabled">SMS vypnuté</string>
-  <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Dotykom nastavte Signal ako Vašu predvolenú aplikáciu</string>
-  <string name="ApplicationPreferencesActivity_on">zapnuté</string>
-  <string name="ApplicationPreferencesActivity_On">Zapnuté</string>
-  <string name="ApplicationPreferencesActivity_off">vypnuté</string>
-  <string name="ApplicationPreferencesActivity_Off">Vypnuté</string>
+  <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Dotykom nastavte Signal ako predvolenú aplikáciu</string>
+  <string name="ApplicationPreferencesActivity_on">zap.</string>
+  <string name="ApplicationPreferencesActivity_On">Zap.</string>
+  <string name="ApplicationPreferencesActivity_off">vyp.</string>
+  <string name="ApplicationPreferencesActivity_Off">Vyp.</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
-  <string name="ApplicationPreferencesActivity_appearance_summary">%1$s téma, %2$s jazyk</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary">Zámok obrazovky %1$s, Registračný zámok %2$s</string>
+  <string name="ApplicationPreferencesActivity_appearance_summary">%1$s motív,  jazyk: %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
     <item quantity="one">%d minúta</item>
@@ -54,8 +55,9 @@
   <string name="DraftDatabase_Draft_audio_snippet">(zvuk)</string>
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(poloha)</string>
+  <string name="DraftDatabase_Draft_quote_snippet">(odpoveď)</string>
   <!--AttchmentManager-->
-  <string name="AttachmentManager_cant_open_media_selection">Nepodarilo sa nájsť aplikáciu pre výber médií.</string>
+  <string name="AttachmentManager_cant_open_media_selection">Nenašla sa aplikácia pre výber médií.</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Chyba prehrávania zvuku!</string>
   <!--BlockedContactsActivity-->
@@ -867,10 +869,10 @@ Bola prijatá správa vzájomnej výmeny kľúčov s neplatnou verziou protokolu
   <string name="preferences__trim_all_conversations_now">Premazať všetky konverzácie teraz</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Skenovať všetky konverzácie a uplatniť limity dĺžky konverzácie</string>
   <string name="preferences__linked_devices">Pripojené zariadenia</string>
-  <string name="preferences__light_theme">Svetlá</string>
-  <string name="preferences__dark_theme">Tmavá</string>
+  <string name="preferences__light_theme">Svetlý</string>
+  <string name="preferences__dark_theme">Tmavý</string>
   <string name="preferences__appearance">Vzhľad</string>
-  <string name="preferences__theme">Téma</string>
+  <string name="preferences__theme">Motív</string>
   <string name="preferences__default">Štandardné nastavenie</string>
   <string name="preferences__language">Jazyk</string>
   <string name="preferences__signal_messages_and_calls">Signal správy a hovory</string>
