--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -94,8 +94,10 @@
   <string name="ContactShareEditActivity_type_missing">Diğer</string>
   <string name="ContactShareEditActivity_invalid_contact">Seçilen kişi geçersiz</string>
   <!--ConversationItem-->
+  <string name="ConversationItem_error_not_delivered">Gönderme başarısız, ayrıntılar için dokunun</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Anahtar takas mesajı alındı, işlemek için dokunun.</string>
   <string name="ConversationItem_group_action_left">%1$s gruptan ayrıldı.</string>
+  <string name="ConversationItem_click_to_approve_unencrypted">Gönderme başarısız, güvensiz gönderim için dokunun</string>
   <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Şifrelenmemiş SMS\'e geri dönülsün mü?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Şifrelenmemiş MMS\'e geri dönülsün mü?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">Bu mesaj alıcının artık Signal kullanıcısı olmaması nedeniyle şifrelenmiş olarak <b>gönderilemez</b>. \n\nGüvensiz mesaj gönderilsin mi?</string>
@@ -223,8 +225,10 @@
   <string name="DateUtils_today">Bugün</string>
   <string name="DateUtils_yesterday">Dün</string>
   <!--DeliveryStatus-->
+  <string name="DeliveryStatus_sending">Gönderiliyor</string>
   <string name="DeliveryStatus_sent">Gönderildi</string>
   <string name="DeliveryStatus_delivered">Gönderildi</string>
+  <string name="DeliveryStatus_read">Okundu</string>
   <!--DeviceListActivity-->
   <string name="DeviceListActivity_unlink_s">\'%s\' bağlantısını kaldır?</string>
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Bu cihazın bağlantısını kaldırarak, artık mesaj alamayacak ya da gönderemeyeceksiniz.</string>
@@ -347,12 +351,15 @@
   <string name="MessageRecord_left_group">Gruptan ayrıldınız.</string>
   <string name="MessageRecord_you_updated_group">Grubu güncellediniz.</string>
   <string name="MessageRecord_you_called">Aradınız</string>
+  <string name="MessageRecord_called_you">Kişi arandı</string>
   <string name="MessageRecord_missed_call">Cevapsız arama</string>
   <string name="MessageRecord_s_updated_group">%s grubu güncelledi.</string>
   <string name="MessageRecord_s_called_you">%s sizi aradı</string>
   <string name="MessageRecord_called_s">%s arandı</string>
   <string name="MessageRecord_missed_call_from">%s tarafından cevapsız çağrı</string>
   <string name="MessageRecord_s_joined_signal">%s Signal\'e katıldı!</string>
+  <string name="MessageRecord_you_set_disappearing_message_time_to_s">Mesaj yok olma zamanını %1$s olarak belirlediniz.</string>
+  <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$smesaj yok olma zamanını %2$s olarak belirledi.</string>
   <string name="MessageRecord_your_safety_number_with_s_has_changed">%s ile güvenlik numaranız değişti.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified">%s ile güvenlik numaranızı doğrulanmış işaretlediniz.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">%s ile güvenlik numaranızı başka bir cihazda doğrulanmış işaretlediniz.</string>
@@ -555,11 +562,11 @@ Geçersiz protokol sürümünde anahtar değişim mesajı alındı.</string>
   <string name="MessageNotifier_failed_to_deliver_message">Mesaj iletimi başarısız oldu.</string>
   <string name="MessageNotifier_error_delivering_message">Mesaj iletiminde hata.</string>
   <string name="MessageNotifier_mark_all_as_read">Tümünü okundu işaretle</string>
-  <string name="MessageNotifier_mark_read">Okundu</string>
+  <string name="MessageNotifier_mark_read">Okundu işaretle</string>
   <string name="MessageNotifier_media_message">Medya mesajı</string>
   <string name="MessageNotifier_reply">Cevapla</string>
   <string name="MessageNotifier_pending_signal_messages">Bekleyen Signal mesajları</string>
-  <string name="MessageNotifier_you_have_pending_signal_messages">Bekleyen Signal mesajlarınız var, almak ve aömak için dokunun</string>
+  <string name="MessageNotifier_you_have_pending_signal_messages">Bekleyen Signal mesajlarınız var, almak ve açmak için dokunun</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kişi</string>
   <!--QuickResponseService-->
@@ -569,6 +576,7 @@ Geçersiz protokol sürümünde anahtar değişim mesajı alındı.</string>
   <string name="SaveAttachmentTask_saved_to">%s konumuna kaydedildi</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Ara</string>
+  <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Sohbet, kişi ve mesajları ara.</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Yeni mesaj</string>
@@ -1151,7 +1159,7 @@ Geçersiz protokol sürümünde anahtar değişim mesajı alındı.</string>
   <string name="RegistrationActivity_continue">Devam Et</string>
   <string name="preferences_chats__backups">Yedekler</string>
   <string name="prompt_passphrase_activity__signal_is_locked">Signal kilitli</string>
-  <string name="prompt_passphrase_activity__tap_to_unlock">Kilidi açmak için dokununuz! </string>
+  <string name="prompt_passphrase_activity__tap_to_unlock">Kilidi açmak için dokunun! </string>
   <string name="RegistrationLockDialog_reminder">Hatırlatma:</string>
   <string name="recipient_preferences__about">Hakkında</string>
   <!--EOF-->
